# armlearn

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt
examples/computations/example_cartesianMode/: CMakeLists.txt  example_cartesianmode.cpp
examples/computations/example_converters/: CMakeLists.txt  example_converters.cpp
examples/computations/example_coordinates/: CMakeLists.txt  example_coordinates.cpp
examples/device_communication/: example_led.cpp  example_torque.cpp
examples/device_communication/example_id/: CMakeLists.txt  example_id.cpp
examples/device_communication/example_led/: CMakeLists.txt  example_led.cpp
examples/device_communication/example_movement/: CMakeLists.txt  example_movement.cpp
examples/device_communication/example_torque/: CMakeLists.txt  example_torque.cpp
examples/learning/example_learn/: CMakeLists.txt  example_learn.cpp
examples/learning/example_learn_device/: CMakeLists.txt  example_learn_device.cpp
examples/trajectories/: example_grabObject.cpp
examples/trajectories/example_grab/: CMakeLists.txt  example_grab.cpp
examples/trajectories/example_loop/: CMakeLists.txt  example_loop.cpp
files/: range.json  resplearnersettings.json
files/learnSettings/: ddpglearnerload.json  ddpglearneroverview.json  ddpglearnersettings.json  ddpglearnersettings_ex.json  ddpgstandardhyperparamranges.json  defaulthyperparamranges.json  simplehyperparamranges.json
include/: definitions.h  widowx.h
include/builder/: builder.h  widowxbuilder.h
include/connection/: definitions.h  range.h  widowx.h
include/devices/: abstractcontroller.h  armsimulator.h  controller.h  nowaitarmsimulator.h  range.h  serialcontroller.h  servomotor.h
include/exception/: computationerror.h  connectionerror.h  convertererror.h  fileerror.h  iderror.h  movementerror.h  outofrangeerror.h  trajectoryerror.h  typeerror.h
include/learning/: learnsettings.h
include/learning/inputs/: input.h
include/learning/iodata/: iovector.h
include/learning/iodata/inputs/: input.h  simpleinput.h
include/learning/iodata/outputs/: output.h  outputchain.h  simpleoutput.h
include/learning/learners/: activepylearner.h  addmodepylearner.h  bufferbasedpylearner.h  devicelearner.h  learner.h  passivepylearner.h  pylearner.h  sdflearner.h  setmodepylearner.h  simplelearner.h  simplepylearner.h  smalladdmodepylearner.h
include/learning/outputs/: output.h
include/physics/: basiccartesianconverter.h  cartesianconverter.h  converter.h  cylindricalconverter.h  optimcartesianconverter.h
include/trajectory/: trajectory.h
src/: main.cpp  widowx.cpp
src/builder/: widowxbuilder.cpp
src/connection/: range.cpp  widowx.cpp
src/devices/: abstractcontroller.cpp  armsimulator.cpp  controller.cpp  nowaitarmsimulator.cpp  serialcontroller.cpp  servomotor.cpp
src/exception/: computationerror.cpp  connectionerror.cpp  convertererror.cpp  fileerror.cpp  iderror.cpp  movementerror.cpp  outofrangeerror.cpp  trajectoryerror.cpp  typeerror.cpp
src/learning/iodata/: iovector.cpp
src/learning/iodata/inputs/: input.cpp  simpleinput.cpp
src/learning/iodata/outputs/: output.cpp  simpleoutput.cpp
src/learning/learners/: activepylearner.cpp  addmodepylearner.cpp  bufferbasedpylearner.cpp  devicelearner.cpp  learner.cpp  passivepylearner.cpp  pylearner.cpp  sdflearner.cpp  setmodepylearner.cpp  simplelearner.cpp  simplepylearner.cpp  smalladdmodepylearner.cpp  smalladdpylearner.cpp
src/physics/: basiccartesianconverter.cpp  cartesianconverter.cpp  converter.cpp  cylindricalconverter.cpp  optimcartesianconverter.cpp
src/trajectory/: trajectory.cpp
tests/: CMakeLists.txt  main.cpp
tests/gtests/: CMakeLists.txt  test_main.cpp
tests/gtests/builder/: a.out  test_builder.cpp
tests/gtests/devices/: test_serial.cpp  test_servomotor.cpp  test_simulator.cpp
tests/gtests/example/: a.out  minimal_test.cpp
tests/gtests/exceptions/: test_exceptions.cpp
tests/gtests/learning/: DONOTUSEtest_smallAddModeLearning.cpp  learntestparam.json  test_bufferBasedLearning.cpp  test_iodata.cpp  test_setModeLearning.cpp
tests/gtests/learning/learntestmodels/: DDPG_model_actor_0.h5  DDPG_model_critic_0.h5  DDPG_model_targetActor_0.h5  DDPG_model_targetCritic_0.h5
tests/gtests/physics/: test_converters.cpp
tests/gtests/trajectory/: test_trajectory.cpp
tests/main/: CMakeLists.txt  main.cpp
