
# TODO: do it with a loop instead

add_subdirectory("device_communication/example_id")
add_subdirectory("device_communication/example_led")
add_subdirectory("device_communication/example_movement")
add_subdirectory("device_communication/example_torque")

add_subdirectory("trajectories/example_grab")